# KeepWindowsAwake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-common.bat  build-debug.bat  build-release.bat  build.bat  main.cpp  start_cmd.bat
